2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::description): Add assertion;
	every token type should have a human-readable description.  In
	the event that's not the case and `NDEBUG` is defined, describe
	the anomalous token as "an undescribed token" rather than "a
	magic token", to make it clearer that the problem results from
	developer oversight.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/token.h: Add new inline member function
	`is_node()` to aid input parser diagnostics.

2025-11-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Trivially refactor.  Rename
	`get_delimited_name()` to `read_delimited_name()` because it
	does not retrieve a property; it advances the input stream
	pointer.  Update declaration and definition.
	(token::next): Update call site.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::is_usable_as_delimiter): Use
	new node token description member function.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	[troff]: Refactor new token description logic into its own
	function, since there is a second place it can be used.

	* src/roff/troff/token.h (class token): Declare new
	`describe_node()` member function.
	* src/roff/troff/input.cpp (token::description): Move the logic
	from here...
	(token::describe_node): ...to this new member function.
	(token::description): Call the new member function.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp
	(read_drawing_command)
	(do_device_extension)
	(do_register)
	(do_zero_width_output)
	(do_name_test)
	(do_bracket)
	(do_overstrike)
	(do_width)
	(read_size):
	Revise text of warnings in category "delim" thrown when an
	inauspicious delimiter is selected outside of compatibility
	mode.

2025-11-23  G. Branden Robinson <g.branden.robinson@gmail.com>
